src/objects/Goal.object
<CustomObject>
    <fields>
        <fullName>OrigGoalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>OrigGoalId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>eGoalId__c</fullName>
        <description>Unique Id Field used to reference different records across Work.com Objects</description>
        <externalId>true</externalId>
        <label>eGoalId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>eParentId__c</fullName>
        <description>Unique Id Field used to reference different records across Work.com Object</description>
        <externalId>true</externalId>
        <label>eParentId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tes__c</fullName>
        <label>tes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Q4_2015_Metrics</fullName>
        <columns>Name</columns>
        <columns>Owner</columns>
        <columns>Progress</columns>
        <columns>Status</columns>
        <columns>DueDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2015 12:00 AM</value>
        </filters>
        <label>Q4 2015 Metrics</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>